--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "fridays-for-future-paderborn-theme",
+  "name": "underscores",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+  "author": "Automattic Theme Team",
+  "license": "GPL-2.0-or-later",
+  "keywords": [
+    "WordPress",
+    "Theme"
+  ],
+  "homepage": "https://github.com/Automattic/_s#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Automattic/_s.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Automattic/_s/issues"
+  },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "bulma": "^0.9.1",
-    "css-loader": "^4.3.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "glob": "^7.1.6",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^1.0.0",
+    "@wordpress/scripts": "^12.1.0",
+    "dir-archiver": "^1.1.1",
     "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^8.1.1",
-    "postcss-loader": "^4.0.4",
-    "postcss-nested": "^5.0.1",
-    "postcss-simple-vars": "^6.0.1",
-    "sass-loader": "^10.0.3",
-    "style-loader": "^2.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.2.0"
+    "rtlcss": "^2.5.0"
   },
-  "dependencies": {}
+  "rtlcssConfig": {
+    "options": {
+      "autoRename": false,
+      "autoRenameStrict": false,
+      "blacklist": {},
+      "clean": true,
+      "greedy": false,
+      "processUrls": false,
+      "stringMap": []
+    },
+    "plugins": [],
+    "map": false
+  },
+  "scripts": {
+    "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
+    "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
+    "compile:rtl": "rtlcss style.css style-rtl.css",
+    "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
+    "lint:js": "wp-scripts lint-js 'js/*.js'",
+    "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map"
+  },
+  "dependencies": {
+    "bulma": "^0.9.1"
+  }
 }
